# gtk_shader_ide

./: .gitignore  Makefile.am  README.md  configure.in  gnu_shader_composer.glade  gnu_shader_composer.gladep
doc/: basic.arbfp  grayscale.arbfp  test.arbvp
gnu_shader_composer/: README  configure.in  gnu_shader_composer.glade
gnu_shader_composer/release/20041014/linux/: gnu_shader_composer.glade
gnu_shader_composer/release/20041104/windoze/: gnu_shader_composer.glade
gnu_shader_composer/src/: Makefile.am  callbacks.c  callbacks.h  interface.c  main.c
release/20041014/linux/: gnu_shader_composer
release/20041104/linux/: gnu_shader_composer  gnu_shader_composer.glade
src/: Makefile.am  callbacks.c  callbacks.h  gnu_shader_composer.glade  gtk_shader_composer.glade  main.c  syntax_highlight.xml
