dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(gnu_shader_composer, 0.1)
AM_CONFIG_HEADER(config.h)
#AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AM_SANITY_CHECK

case "${target_os}" in
  *mingw32* | *cygwin*)
    AC_CHECK_TOOL(WINDRES, windres, :)
    PACKAGE_CFLAGS="$PACKAGE_CFLAGS -mms-bitfields -mno-cygwin"
    PACKAGE_LIBS="$PACKAGE_LIBS -mwindows -mno-cygwin -Wl,--export-all-symbols"
esac

PKG_CHECK_MODULES(GTK, gtk+-2.0)
PKG_CHECK_MODULES(GTKGLEXT, gtkglext-1.0)
PKG_CHECK_MODULES(LIBGLADE, libglade-2.0)

AC_SUBST([	GTK_LIBS	GTK_CFLAGS
		GTKGLEXT_LIBS	GTKGLEXT_CFLAGS	
		LIBGLADE_LIBS	LIBGLADE_CFLAGS
		PACKAGE_LIBS	PACKAGE_CFLAGS])

GETTEXT_PACKAGE=gnu_shader_composer
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
])

